--- a/GraphQLSample/GraphQLSample.csproj
+++ b/GraphQLSample/GraphQLSample.csproj
@@ -6,9 +6,22 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="GraphQL" Version="8.3.0" />
+  <ItemGroup> 
+    <PackageReference Include="GraphQL" Version="8.3.1" /> 
+    <PackageReference Include="GraphQL.MicrosoftDI" Version="8.3.1" /> 
+    <PackageReference Include="GraphQL.Server.Transports.AspNetCore" Version="8.2.0" /> 
+    <PackageReference Include="GraphQL.Server.Ui.GraphiQL" Version="8.2.0" /> 
+    <PackageReference Include="GraphQL.SystemTextJson" Version="8.3.1" /> 
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
